# tardsquad-discord-bot

./: .dockerignore  .gcloudignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  TODO.md  cloudbuild.yaml  docker-compose.yml  hosting.md  pyproject.toml  service.full.yaml  service.yaml
.github/workflows/: linter.yml  push_to_gcr.yml  push_to_gcr.yml.disabled
.google-cloud/: cloudbuild.yaml  service.yaml
tardsquad_discord_bot/: __init__.py  __main__.py  client.py  cog.py  commands.py  commands_general.py  commands_meta.py  commands_rating.py  commands_search.py  constants.py  gcp_port.py  interceptor_helpers.py  interceptors.py  message_interceptor.py  ratingentry.py  textcolor.py
