[tool.poetry]
name = "tardsquad-discord-bot"
version = "0.10.0"
description = "A Discord bot for the Tardsquad guild"
authors = ["Erik Westrup <erik.westrup@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tardsquad/tardsquad-discord-bot"
keywords = ["discord", "discord-bot", "bot"]
classifiers = [
    "Topic :: Utilities",
]
include = ["CHANGELOG.md", "LICENSE", "README.md"]


[tool.poetry.dependencies]
"discord.py" = "^1.7.3"
python = "^3.7"
python-dotenv = "^0.19"
single-source = "^0.2.0"
requests = "^2.26.0"
semver = "^2.13.0"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
autoimport = "^0.10"
black = "^21.11b1"
flake8 = "^4.0"
ipdb = "^0.13"
isort = "^5.9"
pudb = "^2021.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tardsquad-discord-bot = 'tardsquad_discord_bot.__main__:main'

[tool.isort]
line_length = 160

[tool.black]
line_length = 160
